src/core-crm/objects/Study_Area_Plan__c/Study_Area_Plan__c.object-meta.xml
<CustomObject>
    <label>Study Area Plan</label>
    <nameField>
        <displayFormat>SAP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Area Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>