src/core-crm/objects/Study_Area_Plan__c/fields/Enrollment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Start_Date__c</fullName>
    <description>Enrollment effective date</description>
    <label>Enrollment Start Date</label>
    <type>Date</type>
</CustomField>