src/core-crm/objects/Study_Area_Plan__c/fields/hed_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>hed_Program_Enrollment__c</fullName>
    <description>Lookup Course Enrolment Name</description>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Study Area Plans</relationshipLabel>
    <relationshipName>Study_Area_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>