src/core-crm/objects/Study_Area_Plan__c/fields/On_Plan_Flag__c.field-meta.xml
<CustomField>
    <fullName>On_Plan_Flag__c</fullName>
    <description>Study area enrollment status</description>
    <label>On Plan Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>