src/core-crm/objects/Study_Area_Plan__c/fields/SAMS_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>SAMS_Student_ID__c</fullName>
    <description>The Student Id the Enrollment Record is associated to in SAMS</description>
    <label>SAMS Student ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>