src/core-crm/objects/Study_Area_Plan__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Student full name</description>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Study Area Plans</relationshipLabel>
    <relationshipName>Study_Area_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>