src/core-crm/objects/Study_Area_Plan__c/fields/Study_Area__c.field-meta.xml
<CustomField>
    <fullName>Study_Area__c</fullName>
    <description>Lookup Study Area Name</description>
    <label>Study Area</label>
    <referenceTo>Study_Area__c</referenceTo>
    <relationshipLabel>Study Area Plans</relationshipLabel>
    <relationshipName>Study_Area_Plans</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>