src/core-crm/objects/Study_Area_Plan__c/fields/Study_Area_Attempt_No__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Attempt_No__c</fullName>
    <description>The attempt no of this study area</description>
    <label>Study Area Attempt No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>