src/core-crm/objects/Study_Area_Plan__c/fields/Study_Area_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Long_Name__c</fullName>
    <description>This is the long name of the study area from the study area object</description>
    <formula>Study_Area_Name__r.Study_Area_Long_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Area Long Name</label>
    <type>Text</type>
</CustomField>