src/core-crm/objects/Study_Area_Plan__c/fields/Study_Area_Stage__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Stage__c</fullName>
    <description>This is showing the study area stage from the study area object</description>
    <formula>TEXT(Study_Area_Name__r.Study_Area_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Area Stage</label>
    <type>Text</type>
</CustomField>