src/core-crm/objects/Study_Area_Plan__c/fields/Study_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Type__c</fullName>
    <description>The description of the type of Study Area defined in SAMS.</description>
    <formula>TEXT( Study_Area_Name__r.Study_Area_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Area Type</label>
    <type>Text</type>
</CustomField>